--- a/app/views/search/search_result.html.erb
+++ b/app/views/search/search_result.html.erb
@@ -2,3 +2,5 @@
 Title: <%= @search_result[:title] %>
 <br/>
 Category: <%= @search_result[:category] %>
+<br/>
+total item count <%= @search_result[:count] %>
