--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div id="searchContainer" class="searchContainer">
 <%= form_tag("/search", :method => "get") do %>
   <%= label_tag(:query, "Search for:") %>
   <%= text_field_tag(:query) %>
   <%= submit_tag("Search") %>
 <% end %>
+<div id="mainContainer" class="mainContainer">
 <%= yield %>
-
+</div>
 </body>
 </html>
