--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#image{
+  float: left;
+  text-align: center;
+  width: 115px;
+  margin-top:5px;
+}
+.buy_now{
+  background:url(buy_now.png);
+  background-size:80px 60px;
+  background-repeat:no-repeat;
+}
