--- a/app/views/shop/search.html.erb
+++ b/app/views/shop/search.html.erb
@@ -2,14 +2,18 @@
 	
 <% @search_result[:items].each do |item| %>
   <%= form_tag("/buy", :metohod => "post") do%>
+    <%= hidden_field_tag(:title, item[:title])%>
+    <%= hidden_field_tag(:asin, item[:asin])%>
     <div>
-      Title: <%= item[:title] %>
+      <div id="image" class="image">
+        <%= link_to image_tag(item[:small_image]), item[:detail_page_url], :target => "_blank"%>
+      </div>
+      <%= link_to item[:title], item[:detail_page_url], :target => "_blank" %>
       <br/>
       Category: <%= item[:category] %>
-      <%= hidden_field_tag(:title, item[:title])%>
-      <%= hidden_field_tag(:asin, item[:asin])%>
       <br/>
-      <%= submit_tag("Buy") %>
+      <%= item[:price] %>
+      <%= image_submit_tag("buy.png", { :width =>'100', :height=>'40' , :alt=>'thumb'}) %>
       <br/><br/>
     </div>
   <% end %>
