balance and transaction added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,12 @@
 #searchContainer{
 	background-color: #2ECCFA;
 }
+
+#products_search{
+	width: 500px;
+	display:inline;
+}
+
 #mainContainer{
 	background-color: #FFFFFF;
 	min-height: 700px;
