--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,13 @@
 </head>
 <body>
   <div id="searchContainer" class="searchContainer">
+  	
     <%= form_tag "/search", :method => "get", :id => "products_search" do %>
       <%= label_tag(:query, "Search for:") %>
       <%= text_field_tag(:query) %>
       <%= submit_tag("Search") %>
     <% end %>
+    balance: <%= current_balance %>
   </div>
   <div id="mainContainer" class="mainContainer">
     <%= yield %>
