--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,6 +2,7 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
+ *= require zollaria_bootstrap
  *= require_self
  *= require_tree . 
 */
@@ -9,10 +10,6 @@
 	background-color: #2ECCFA;
 }
 
-#products_search{
-	width: 500px;
-	display:inline;
-}
 
 #mainContainer{
 	background-color: #FFFFFF;
