twitter bootstrap heroku fix

--- a/app/assets/stylesheets/zollaria_bootstrap.css.scss
+++ b/app/assets/stylesheets/zollaria_bootstrap.css.scss
@@ -6,5 +6,5 @@ $gridColumnWidth: 70px;
 $gridGutterWidth: 10px;
 
 // import original bootstrap
-@import "twitter/bootstrap";
-@import "twitter/bootstrap-responsive";
+@import "bootstrap";
+@import "bootstrap-responsive";
