--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <a class="brand" href="#">Zollaria</a>
-        <%= form_tag( { :controller => 'users', :action => "search", :method => "get"}, :id => "products_search", :class => "navbar-search pull-left" ) do %>
+         <%= form_tag "/search", :method => "get", :id => "products_search" do %>
           <%= text_field_tag 'query', nil, :class => 'search-query' %>
         <% end %>
         <ul class="nav">
