--- a/app/views/users/_search_result.html.erb
+++ b/app/views/users/_search_result.html.erb
@@ -7,6 +7,7 @@
     <%= hidden_field_tag(:detail_page_url, item[:detail_page_url])%>
     <%= hidden_field_tag(:category, item[:category])%>
     <%= hidden_field_tag(:small_image, item[:small_image])%>
+    <%= hidden_field_tag(:medium_image, item[:medium_image])%>
     <%= hidden_field_tag(:price, item[:price])%>
     <div>
       <div id="image" class="image">
