--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,9 +2,9 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
+ *= require app_bootstrap
  *= require_self
- *= require_tree 
- *= require twitter/bootstrap. 
+ *= require_tree . 
 */
 #searchContainer{
 	background-color: #2ECCFA;
@@ -25,4 +25,7 @@
   background:url(buy_now.png);
   background-size:80px 60px;
   background-repeat:no-repeat;
+}
+.home_inventory_hero{
+  background-color: #FFFFFF;
 }
