--- a/app/assets/stylesheets/zollaria_bootstrap.css.scss
+++ b/app/assets/stylesheets/zollaria_bootstrap.css.scss
@@ -1,10 +1,10 @@
 // change colors
-//$linkColor: red;
+$linkColor: red;
 
 // change grid
-$gridColumnWidth: 70px;
-$gridGutterWidth: 10px;
+//$gridColumnWidth: 70px;
+//$gridGutterWidth: 10px;
 
 // import original bootstrap
-//@import "bootstrap";
-//@import "bootstrap-responsive";
+@import "bootstrap";
+@import "bootstrap-responsive";
