--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,10 +1,59 @@
-<h2>Your Inventory:</h2>
+<div>
+  <h1 style="text-align: center;">
+    Your Inventory
+  </h1>
+</div>
 
-<ul>
-  <% @items.each do |item| %>
-    <li><%= item[:title] %></li>
-  <% end %>
-</ul>
-
-
+<div class="hero-unit ">
+<div class="row">
+<div class="span3">
+  <% @items[:items_col1].each do |item| %>
+    <div class="well-home">
+      <div>
+          <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+		  <div>
+            <%= item[:title] %>
+    	  </div> 
+      </div>
+    </div>
+  <% end%>
+</div>
+<div class="span3">
+  <% @items[:items_col2].each do |item| %>
+    <div class="well-home">
+      <div>
+          <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+        <div>
+          <%= item[:title] %>
+    	</div>
+      </div>
+    </div>
+  <% end%>
+</div>
+<div class="span3">
+  <% @items[:items_col3].each do |item| %>
+    <div class="well-home">
+      <div>
+          <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+        <div>
+          <%= item[:title] %>
+	    </div>
+      </div>
+    </div>
+  <% end%>
+</div>
+<div class="span3">
+  <% @items[:items_col4].each do |item| %>
+    <div class="well-home">
+      <div>
+          <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+        <div>
+          <%= item[:title] %>
+	    </div>
+      </div>
+    </div>
+  <% end%>
+</div>
+</div>
+</div>
 
