--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -10,7 +10,9 @@
   <% @items[:items_col1].each do |item| %>
     <div class="well-home">
       <div>
-        
+      	  <% unless item[:medium_image] %>
+            <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+		  <% end %>
 		  <div>
             <%= item[:title] %>
     	  </div> 
@@ -22,7 +24,9 @@
   <% @items[:items_col2].each do |item| %>
     <div class="well-home">
       <div>
-
+        <% unless item[:medium_image] %>
+          <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+		<% end %>
         <div>
           <%= item[:title] %>
     	</div>
@@ -34,6 +38,9 @@
   <% @items[:items_col3].each do |item| %>
     <div class="well-home">
       <div>
+        <% unless item[:medium_image] %>
+          <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+		<% end %>
         <div>
           <%= item[:title] %>
 	    </div>
@@ -45,6 +52,9 @@
   <% @items[:items_col4].each do |item| %>
     <div class="well-home">
       <div>
+        <% unless item[:medium_image] %>
+          <%= link_to image_tag(item[:medium_image], :alt=> item[:title]), item[:detail_page_url], :target => "_blank"%>
+		<% end %>
         <div>
           <%= item[:title] %>
 	    </div>
