--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
           <li class="divider-vertical">
           <li><%= link_to "home", {:controller => :user, :action => :home}, :id => 'nav_home'%></li>
           <li class="divider-vertical">
-          <li><a href="#">friends</a></li>
+          <li><%= link_to "friends", {:controller => :user, :action => :friends_main}, :id => 'nav_friends'%></li>
           <li class="divider-vertical">
-          <li><a href="#">shop</a></li>
+          <li><%= link_to "shop", {:controller => :user, :action => :shop}, :id => 'nav_shop'%></li>
           <li class="divider-vertical">
         </ul>
     </div>
