view friend profile ui fix2

--- a/app/views/users/_friends_home.js.erb
+++ b/app/views/users/_friends_home.js.erb
@@ -1,2 +1,2 @@
-$('.navbar').focus();
+$('#nav_home').focus();
 $("#mainContainer").html("<%= escape_javascript render :partial => "friends_home_html" %>");
