view friend profile ui fix3

--- a/app/views/users/_friends_home.js.erb
+++ b/app/views/users/_friends_home.js.erb
@@ -1,2 +1,2 @@
-$('#nav_home').focus();
+$('#query').focus();
 $("#mainContainer").html("<%= escape_javascript render :partial => "friends_home_html" %>");
