--- a/app/assets/stylesheets/app_bootstrap.css.scss
+++ b/app/assets/stylesheets/app_bootstrap.css.scss
@@ -16,6 +16,16 @@
   font-size: 12px;
 }
 
+.hero-unit {
+    background-color: #EEEEEE;
+    border-radius: 6px 6px 6px 6px;
+    margin-bottom: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 // change grid
 //$gridColumnWidth: 70px;
 //$gridGutterWidth: 10px;
