--- a/app/views/users/buy_confirm.js.erb
+++ b/app/views/users/buy_confirm.js.erb
@@ -1,2 +1,3 @@
 $('#query').focus();
+$('#balance').html("balance: $<%= current_balance %>");
 $("#mainContainer").html("<%= escape_javascript render :partial => 'buy_success' %>");
